More spacing below robot on homepage (issue #720)

--- a/web/src/components/index.css
+++ b/web/src/components/index.css
@@ -203,7 +203,7 @@ button {
   }
 
   .home .hero-space {
-    height: 25rem;
+    height: 26rem;
   }
 }
 
